--- a/site.html
+++ b/site.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=2.0">
+        <link rel="icon" href="gerard.ico" type="image/x-icon">
+
+       
+
+
+    </head>
+
+
+    <body>
     
-</body>
+        <p></p>
+        <center><form method="get" action="https://www.youtube.com/shorts/xXewtl6KLEc">
+            <button type="submit"></button>
+    </body>
 </html>
