--- a/site.html
+++ b/site.html
@@ -20,6 +20,7 @@
         <h2>Albuns</h2>
         <h3>I Brought You My Bullets, You Brought Me Your Love</h3>
         <img src="I_Brought_You_My_Bullets,_You_Brought_Me_Your_Love (1).jpg" alt="Capa do album I Brought You My Bullets, You Brought Me Your Love">
+        
         <h4>    ●"Romance" </h4>
         <h4>    ●"Honey, This Mirror Isn't Big Enough for the Two of Us"</h4>
         <h4>	●"Vampires Will Never Hurt You"  </h4>
@@ -60,7 +61,21 @@
         <h4>	●"Disenchanted"</h4>
         <h4>	●"Famous Last Words"</h4>
 
-        <h3>MDanger Days: The True Lives of the Fabulous Killjoys</h3>
+        <h3>Danger Days: The True Lives of the Fabulous Killjoys</h3>
+        <h4>    ●"Look Alive, Sunshine"</h4>
+        <h4>    ●"Na Na Na (Na Na Na Na Na Na Na Na Na)"</h4>
+        <h4>	●"Bulletproof Heart"</h4>
+        <h4>	●"SING"</h4>
+        <h4>    ●"Planetary (GO!)"</h4>
+        <h4>    ●"The Only Hope for Me Is You"</h4>
+        <h4>	●"Jet Star and the Kobra Kid/Traffic Report"</h4>
+        <h4>	●"Party Poison"</h4>
+        <h4>	●"The Kids from Yesterday"</h4>
+        <h4>	●"DESTROYA"</h4>
+        <h4>	●"Guns for Hands"</h4>
+        <h4>	●"SAVE YOURSELF, I'LL HOLD THEM BACK"</h4>
+        <h4>	●"S/C/A/R/E/C/R/O/W"</h4>
+        <h4>	●"Summertime"</h4>
 
 
         <link rel="stylesheet" href="index.css">
@@ -79,8 +94,6 @@
     <body backgroundcolor="black">
         
         <p></p>
-        <center><form method="get" action="youtube.com/watch?v=UCCyoocDxBA&list=RDUCCyoocDxBA&start_radio=1&pp=ygUGSEVMRU5BoAcB">
-            <button type="submit">HELENA</button>
 
             <p id="texto">Meu paragrafo</p>
 
@@ -89,9 +102,12 @@
                 <source src="My_Chemical_Romance_-_Helena_(SkySound.cc).mp3" type="audio/mpeg">
             </audio>
 
-            <div class="conteudo">
+            <div class="conteudo" id="caixa">
                 <p>Texto</p>
                 <h1>Titulo</h1>
+                <input type="text" id="campoTexto" placeholder="Digite algo aqui">
+                <button id="btn">Clique aqui</button>
+                <p id="mensagem"></p>
             </div>
 
 
