--- a/site.html
+++ b/site.html
@@ -77,6 +77,9 @@
         <h4>	●"S/C/A/R/E/C/R/O/W"</h4>
         <h4>	●"Summertime"</h4>
 
+        <div class="box">
+            
+        </div>
 
         <link rel="stylesheet" href="index.css">
 
