--- a/site.html
+++ b/site.html
@@ -12,7 +12,7 @@
 
         <h2>integrantes</h2>
 
-        <h3>Gerard Way</h3>
+        <a href="gerards.webp">Gerard Way</a>
         <h3>Ray Toro</h3>
         <h3>Frank Iero</h3> 
         <h3>Mikey Way</h3>
@@ -32,6 +32,7 @@
         <h4>	●"Demolition Lovers"  </h4>
 
         <h3>Three Cheers for Sweet Revenge</h3>
+        <img src="Three_Cheers_for_Sweet_Revenge (2).jpg" alt="emo">
         <h4>    ●"Helena"</h4>
         <h4>    ●"Give 'Em Hell, Kid"</h4>
         <h4>	●"To the End"</h4>
@@ -47,6 +48,7 @@
         <h4>    ●"I Never Told You What I Do for a Living"</h4>
 
         <h3>The Black Parade</h3>
+        <img src="black paradaa.jpg" alt="black parade">
         <h4>    ●"Welcome to the Black Parade"</h4>
         <h4>    ●"Dead!"</h4>
         <h4>	●"This Is How I Disappear"</h4>
@@ -62,6 +64,7 @@
         <h4>	●"Famous Last Words"</h4>
 
         <h3>Danger Days: The True Lives of the Fabulous Killjoys</h3>
+        <img src="Danger_Days-album-2010.jpg" alt="Danger Days">
         <h4>    ●"Look Alive, Sunshine"</h4>
         <h4>    ●"Na Na Na (Na Na Na Na Na Na Na Na Na)"</h4>
         <h4>	●"Bulletproof Heart"</h4>
