--- a/projeto/index.html
+++ b/projeto/index.html
@@ -38,6 +38,9 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6329.625270872617!2d127.0426930190341!3d37.51233700615867!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca511277990ff%3A0x39bb115e656496f0!2sT1%20Esports%20Academy!5e0!3m2!1spt-BR!2sbr!4v1763404289242!5m2!1spt-BR!2sbr" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </article>
         </section>
+
+        <a class="btn-whatsapp" href="https://wa.me/5516991429898" target="_blank" rel="noopener">📞 Fale no Whatsapp</a>
+
         
     </main>
     
